manifiestos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upsbank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-upsbank
                port:
                  number: 8080
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
